# flower-shop-user-service

./: .env.example  .gitignore  Dockerfile  pyproject.toml  setup.cfg
.github/workflows/: terraform.yml
project/: settings.py  urls.py
src/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
src/apps/core/: exceptions.py  services.py
src/apps/favorites/: models.py  serializers.py  urls.py  views.py
src/apps/favorites/migrations/: 0001_initial.py  0002_alter_favorite_unique_together.py  0003_rename_item_favorite_item_id_and_more.py
src/apps/notifications/: serializers.py  tasks.py  urls.py  views.py
src/apps/notifications/services/: notify_service.py
src/apps/users/: models.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/settings/: base.py  production.py  settings.py  test.py
tests/: conftest.py
tests/factories/: user_factories.py
tests/unit/test_users/test_views/: test_register_view.py  test_user_detail_view.py  test_user_list_view.py
tests/unit/tests_notifications/test_views/: test_notify_view.py
